<resources>
    <string name="app_name">SariStorePOS</string>
    <string name="shopping_cart_icon_description">Shopping Cart Icon</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_date">Transaction DATE</string>
    <string name="transaction_details">Transaction DETAILS</string>
    <string name="transaction_total_amount">Transaction TOTAL AMOUNT</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_profile_page_label">User Profile Page</string>
    <string name="string_update">Update</string>
    <string name="string_edit_mode">Edit</string>
    <string name="string_name">Name</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_gmail">Gmail</string>
    <string name="string_sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_product">Update Product</string>
    <string name="create_product">Create Product</string>
    <string name="product_name">Product</string>
    <string name="stock_label">Stock:</string>
    <string name="price_label">Price:</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="price_placeholder">Price</string>
    <string name="stock_placeholder">Stock</string>
    <string name="save_product_button">Save</string>
    <string name="sample_product_placeholder">Sample Product</string>
    <string name="unit_price_placeholder">Unit Price: ₱100.00</string>
    <string name="pos_item_add">+</string>
    <string name="pos_quantity_placeholder">1</string>
    <string name="pos_item_minus">-</string>
    <string name="pos_unit_price_placeholder">₱ 1.00</string>
    <string name="pos_quantity_remaining_placeholder">1 item left</string>
    <string name="pos_item_detail_remove">Remove</string>
    <string name="pos_item_cancel_label">Cancel</string>
    <string name="pos_item_save_label">Save</string>
    <string name="login_welcome_label">Welcome!</string>
    <string name="sign_in_label">Sign-In</string>
    <string name="login_phone_number_label">Phone Number</string>
    <string name="login_gmail_label">Gmail</string>
    <string name="inventory_scan_barcode_placeholder">Scan Barcode</string>
    <string name="inventory_remove_image_label">Remove Image</string>
    <string name="inventory_product_image_content_desc">Product Image</string>
    <string name="inventory_back_navigation_button_content_desc">Back Navigation Button</string>
    <string name="inventory_clear_barcode_content_desc">Clear Barcode</string>
    <string name="store_finder_cancel_label">Cancel</string>
    <string name="store_finder_join_as_assistant_label">Join As Assistant</string>
    <string name="store_finder_join_as_owner_label">Join As Owner</string>
    <string name="store_finder_uid_placeholder">\@17f1e065a4f001</string>
    <string name="store_finder_address_placeholder">Sitio Yakal, Brgy Malinao, San Pablo City, Laguna</string>
    <string name="store_finder_store_placeholder">Store A</string>
    <string name="store_finder_description">Would you like to join the store with the following detail:</string>
    <string name="user_recruitment_cancel_label">Cancel</string>
    <string name="user_recruitment_recruit_as_assistant_label">Recruit As Assistant</string>
    <string name="user_recruitment_recruit_as_owner_label">Recruit As Owner</string>
    <string name="user_recruitment_gmail_placeholder">\\username.mail@gmail.com</string>
    <string name="user_recruitment_phone_placeholder">(+63)999 9999 999</string>
    <string name="user_recruitment_username_placeholder">User Name</string>
    <string name="user_recruitment_description_label">Would you like to recruit a user with the following details:</string>
    <string name="store_selector_status_placeholder">Status</string>
    <string name="store_selector_negative_label">Negative</string>
    <string name="store_selector_positive_label">Positive</string>
    <string name="store_selector_id_placeholder">\@RANDOMID1234</string>
    <string name="store_selector_address_placeholder">CASILAGAN MANGATAREM PANGASINAN</string>
    <string name="store_selector_assistant_placeholder">ASSISTANT</string>
    <string name="store_selector_name_placeholder">SARI SARI STORE</string>
    <string name="store_profile_status_placeholder">Status</string>
    <string name="store_profile_negative_button_label">Negative</string>
    <string name="store_profile_positive_button_label">Positive</string>
    <string name="store_profile_uid_placeholder">\@RANDOMID1234</string>
    <string name="store_profile_phonenumber_placeholder">+639672410294</string>
    <string name="store_profile_gmail_placeholder">jdelacruz@gmail.com</string>
    <string name="store_profile_position_placeholder">ASSISTANT</string>
    <string name="store_profile_username_placeholder">Juan Dela Cruz</string>
    <string name="store_profile_name_placeholder">STORE PROFILE</string>
    <string name="store_profile_dismiss_button_label">Dismiss</string>
    <string name="store_profile_store_information_label">STORE INFORMATION</string>
    <string name="store_profile_store_name_placeholder">Store Name</string>
    <string name="store_profile_store_address_placeholder">Store Address</string>
    <string name="store_profile_store_users_placeholder">STORE USERS</string>
    <string name="store_profile_recruit_button_label">Recruit</string>
    <string name="dashboard_page_profile_label">Profile</string>
    <string name="dashboard_page_store_label">Store</string>
    <string name="dashboard_page_analytics_label">Analytics</string>
    <string name="dashboard_page_inventory_label">Inventory</string>
    <string name="dashboard_page_transactions_label">Transactions</string>
    <string name="dashboard_page_top_sold_description">*For past 30days</string>
    <string name="dashboard_page_top_sold_products_label">Top Sold Products</string>
    <string name="dashboard_page_top_earn_description">*For past 30days</string>
    <string name="dashboard_page_top_earning_label">Top Earning Products</string>
    <string name="dashboard_page_ssi_year_label">Year</string>
    <string name="dashboard_page_ssi_month_label">Month</string>
    <string name="dashboard_page_ssi_week_label">Week</string>
    <string name="dashboard_page_sales_and_sold_items_label">Sales and Sold Items</string>
    <string name="dashboard_page_today_sales_label">Today Sales</string>
    <string name="dashboard_page_purchase_label">Purchase</string>
    <string name="dashboard_page_store_address_placeholder">SITIO TUROD, BRGY CASILAGAN, MANGATAREM, PANGASINAN</string>
    <string name="dashboard_page_store_name_placeholder">SARI SARI STORE</string>
    <string name="user_login_version_placeholder">Version 0.0</string>
    <string name="checkout_page_label">Checkout</string>
    <string name="fragment_empty_text">No Content Available</string>
    <string name="no_search_result_available_text">No Search Result Available</string>
    <string name="no_search_result_available_text_description">Please search existing unassociated stores</string>
    <string name="recruit_no_search_result_available_text">No Search Result Available</string>
    <string name="recruit_no_search_result_available_text_description">Please search existing unassigned users</string>
    <string name="store_profile_save_button_cD">Store Profile Save Button</string>

</resources>