<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/store_finder_dialog_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/store_finder_recycler_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/store_finder_description"
            android:textColor="@color/lavender"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/store_finder_recycler_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_finder_store_placeholder"
            android:textColor="@color/lavender"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/store_finder_recycler_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_finder_address_placeholder"
            android:textColor="@color/lavender"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/store_finder_recycler_store_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_finder_uid_placeholder"
            android:textColor="@color/lightGray"
            android:textSize="14sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_join_as_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/store_finder_join_as_owner_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/positiveButtonColor"/>

            <Button
                android:id="@+id/btn_join_as_assistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/store_finder_join_as_assistant_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/positiveButtonColor"/>

            <Button
                android:id="@+id/btn_store_finder_dialog_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/store_finder_cancel_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/negativeButtonColor"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>