<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/user_recruitment_dialog_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/user_recruitment_recycler_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/user_recruitment_description_label"
            android:textColor="@color/lavender"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_recruitment_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_recruitment_username_placeholder"
            android:textColor="@color/lavender"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/user_recruitment_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_recruitment_phone_placeholder"
            android:textColor="@color/lavender"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/user_recruitment_user_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_recruitment_gmail_placeholder"
            android:textColor="@color/lavender"
            android:textSize="14sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_recruit_as_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/user_recruitment_recruit_as_owner_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/positiveButtonColor"/>

            <Button
                android:id="@+id/btn_recruit_as_assistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/user_recruitment_recruit_as_assistant_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/positiveButtonColor"/>

            <Button
                android:id="@+id/btn_user_recruitment_dialog_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/user_recruitment_cancel_label"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/negativeButtonColor"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>