<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activities.inventory._InventoryCreateProductPage">

    <!-- Title and Image Layout -->

    <LinearLayout
        android:id="@+id/createProductTitleRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:onClick="navigateBack"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_arrow_back_24" />
        <TextView
            android:id="@+id/createProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_product"
            android:textColor="@color/lavender"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createProductTitleRL">

        <EditText
            android:autofillHints="name"
            android:id="@+id/uploadProduct"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/product_name"
            android:textColor="@color/lavender"
            android:textSize="24sp"
            tools:ignore="LabelFor,TextFields" />

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="241dp"
            android:layout_height="249dp"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/barcodeInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/lavender"
            android:text="@string/scan_barcode">
        </TextView>

    </LinearLayout>

    <!-- Stock and Price Layout -->

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <!-- Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stockTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/stock_label"
                android:textColor="@color/lavender"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/uploadStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_placeholder"
                android:textColor="@color/lavender"
                android:textSize="24sp" />
        </TableRow>

        <!-- Row 2 -->
        <TableRow>

            <TextView
                android:id="@+id/stockTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/price_label"
                android:textColor="@color/lavender"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/uploadPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_placeholder"
                android:textColor="@color/lavender"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="160dp"
        android:text="@string/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>