<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.projectfkklp.saristorepos.activities.user_login.UserLoginPage">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="10dp"
        android:foregroundGravity="center"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/user_login_page_greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1px"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/login_welcome_label"
        android:textColor="#040C0E"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/teal_border">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_label"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:backgroundTint="#2091AB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/login_phone_number_label"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                app:cornerRadius="50dp"
                android:onClick="loginViaPhone"/>

            <View
                android:layout_gravity="center_horizontal"
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:background="@color/lightGray"
                />

            <Button
                android:backgroundTint="#2091AB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/login_gmail_label"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="60dp"
                android:onClick="loginViaGmail"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_login_page_version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/user_login_version_placeholder"/>

    </LinearLayout>

</LinearLayout>